Admin and school profile can be viewed
